[package]
name = "risp"
version = "0.1.0"
authors = ["MainShayne233 <shaynetremblay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-hack = "0.5"
risp_macro = { path = "../risp_macro" }
risp_ast = { path = "../risp_ast" }