[package]
name = "risp_macro"
version = "0.1.0"
authors = ["MainShayne233 <shaynetremblay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-hack = "0.5"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[lib]
proc-macro = true