[package]
name = "risp_macro"
version = "0.1.0"
authors = ["MainShayne233 <shaynetremblay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-hack = "0.5"
proc-quote = "0.3.0"
risp_ast = { path = "../risp_ast" }
syn = { version = "1.0", features = ["full"] }

[lib]
proc-macro = true